# ftdi-mpsse

./: .gitignore  README.md  meson.build  meson.options
examples/: bme.c  display.c  meson.build  oled.c  rtc.c  utils.h
include/: ftdi_i2c.h  ftdi_mpsse.h  ftdi_spi.h  meson.build
src/: error.c  i2c.c  internal.h  meson.build  mpsse.c  mpsse_reg.h  spi.c
tools/: i2c.c  meson.build  spi.c  utils.h
