install_examples = get_option('install_examples')

executable('display', 'display.c', dependencies: mpsse, install: install_examples)
executable('bme', 'bme.c', dependencies: mpsse, install: install_examples)
executable('oled', 'oled.c', dependencies: mpsse, install: install_examples)
executable('rtc', 'rtc.c', dependencies: mpsse, install: install_examples)
